lang/test/testdata/errors/arithmetic_type.scampi
let x = "hello" - 1
